# car-dealership-django

./: .gitignore  README.md  docker-compose.yml
backend/: pyproject.toml  pytest.ini
backend/api/: admin.py  models.py  urls.py
backend/api/serializers/: brand_serializer.py  car_serializer.py  model_serializer.py  user_serializer.py  year_serializer.py
backend/api/tests/: conftest.py  test_db.py
backend/api/tests/test_serializers/: test_brand_serializer.py  test_car_serializer.py  test_model_serializer.py  test_user_serializer.py  test_year_serializer.py
backend/api/tests/test_views/: test_brand_view.py  test_car_view.py  test_model_view.py  test_user_view.py  test_year_view.py
backend/api/utils/: account_manager.py  permission.py
backend/api/views/: brand_view.py  car_view.py  model_view.py  user_view.py  year_view.py
backend/project/: settings.py  urls.py
frontend/: package-lock.json  package.json
frontend/front-dealership/: package-lock.json  package.json
frontend/front-dealership/src/: App.jsx  Routes.js
frontend/front-dealership/src/components/partials/Header/: index.jsx  styled.jsx
frontend/front-dealership/src/components/partials/NavBar/: index.jsx  styled.jsx
frontend/front-dealership/src/components/partials/SignUp/: index.jsx  styled.jsx
frontend/front-dealership/src/pages/SignIn/: index.jsx
frontend/front-dealership/src/utils/: formatCpf.js
frontend/src/: Routes.js
frontend/src/components/: ErrorMessage.jsx  PageBody.jsx
frontend/src/components/partials/Footer/: index.jsx
frontend/src/components/partials/NavBar/: index.jsx  styled.jsx
frontend/src/pages/Register/: index.jsx
frontend/src/pages/SignIn/: styled.jsx
frontend/src/services/: api.js
nginx/: default.conf
